--- a/WPF_Brickstore/MainWindow.xaml
+++ b/WPF_Brickstore/MainWindow.xaml
@@ -7,6 +7,28 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <StackPanel Grid.Row="0">
+            <TextBlock HorizontalAlignment="Center" FontSize="24" Text="Lego Items" />
+            <Button Content="Choose a file" Width="150" Margin="8" FontSize="20" x:Name="btnLoadFile" Click="btnLoadFile_Click" />
+        </StackPanel>
+
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="80" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="center" HorizontalAlignment="Center">
+                <TextBlock Text="Filter by" FontSize="22" Margin="10" />
+                <ComboBox x:Name="cbFields" Width="180" Height="30" FontSize="18" />
+                <TextBox x:Name="txtFilter" Width="200" Margin="10" TextChanged="txtFilter_TextChanged" FontSize="20" />
+            </StackPanel>
+            <DataGrid x:Name="dgLegoItems" Grid.Row="1" />
+        </Grid>
 
     </Grid>
 </Window>
